desplegando el proyecto

--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
   "bugs": {
     "url": "https://github.com/Guillermoizalde/Async/issues"
   },
-  "homepage": "https://github.com/Guillermoizalde/Async/blob/main/README.md"
+  "homepage": "https://github.com/Guillermoizalde/Async/README"
 }
